--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
-  "dependencies": {
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
-    "fs": "^0.0.1-security",
-    "request": "^2.88.2"
-  }
+    "name": "GIE-Staff",
+    "version": "1.0.0",
+    "description": "Discord bot for team GIE",
+    "main": "api.ts",
+    "scripts": {
+        "start": "npm run build; node api.js",
+        "start:prod": "npm run build && node api.js",
+        "dev": "nodemon api.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "tsc -p tsconfig.json -w",
+        "build": "tsc -p tsconfig.json"
+    },
+    "author": "Morbakos",
+    "license": "ISC",
+    "dependencies": {
+        "@types/dotenv": "^8.2.0",
+        "add": "^2.0.6",
+        "discord.js": "^12.5.3",
+        "dotenv": "^8.2.0",
+        "fs": "0.0.1-security",
+        "mysql": "^2.18.1",
+        "node-typescript": "^0.1.3",
+        "request": "^2.88.2",
+        "typescript": "^4.2.4"
+    },
+    "devDependencies": {
+        "@types/node": "^15.0.2"
+    }
 }
